# windmenu

./: .gitignore  Cargo.toml  KEYS.md  README.md  RELEASE_NOTES.md  build-installer.ps1  build-installer.sh  commands.toml  config.toml  flake.nix  install.ps1  installer.nsi  windmenu.toml  wlines-config.txt
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
autostart/: README.md  autostart.ps1
packs/: README.md  catppuccin-theme.toml  dmenu-theme.toml  dracula-theme.toml  hatsunemiku-theme.toml  nord-theme.toml  power-commands.toml  tokyonight-theme.toml  windows-tools-commands.toml  wt-keys-commands.toml
src/: apps.rs  daemon.rs  doctor.rs  fetch.rs  history.rs  main.rs  menu.rs  monitor.rs  proc.rs  reg.rs  task.rs  theme.rs  wlan.rs  wlines.rs
themes/: catppuccin-frappe.toml  catppuccin-mocha.toml  catppuccin.toml  dmenu.toml  hatsunemiku.toml
