[package]
name = "windmenu"
version = "0.7.0"
edition = "2021"
description = "A minimalist Windows launcher"
license = "GPL-3.0-only"
repository = "https://github.com/gicrisf/windmenu"
keywords = ["windows", "launcher", "dmenu", "hotkey"]
categories = ["command-line-utilities", "gui"]

[[bin]]
name = "windmenu"
path = "src/main.rs"

[profile.release]
panic = "abort"
strip = true
lto = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "1.1"
winapi = { version = "0.3.9", features = ["winuser", "shellapi", "wincon", "processenv", "fileapi", "handleapi", "errhandlingapi", "winbase", "wingdi", "libloaderapi", "winnt", "winerror", "synchapi", "shellscalingapi", "winreg"] }
